--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "totp-cli"
-version = "0.1.0"
 authors = ["Keli <root@keli.im>"]
 edition = "2018"
+name = "totp-cli"
+version = "0.1.0"
 
 [dependencies]
-toml = "0.5.6"
-oath = "0.10.2"
-serde = { version = "1.0.104", features = ["derive"] }
 dirs = "2.0.2"
-base32 = "0.4.0"
+google-authenticator = "0.3.0"
+serde = {version = "1.0.104", features = ["derive"]}
+toml = "0.5.6"
